# rag-whatsapp

./: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
model/: chain.py  prompt.py
model/vector_storage/vector_embeddings_alameda_nobres/: index.faiss  index.pkl
model/vector_storage/vector_embeddings_antonio_julia/: index.faiss  index.pkl
model/vector_storage/vector_embeddings_capiba_proprietario/: index.faiss  index.pkl
model/vector_storage/vector_embeddings_capiba_sindico/: index.faiss  index.pkl
model/vector_storage/vector_embeddings_mirante_frio/: index.pkl
src/: utils.py  whatsapp.py
vectordbs/: extract_text_from_pdf.py  indexing.py  llm_preprocessing_tables.ipynb  processing_functions.py  utils.py
